<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222"
    android:id="@+id/activity_visitor_team"
    tools:context="com.anoniq.gabort.oio.VisitorTeamActivity">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="10"
        android:columnCount="12"
        android:paddingLeft="5dp"
        android:clipChildren="false">

        <Button
            android:text="@string/backtostart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gobackhome"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="0"
            android:padding="25dp"
            android:textSize="25sp" />

        <Button
            android:text="@string/recordlines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reclines"
            android:layout_column="7"
            android:layout_columnSpan="3"
            android:layout_row="0"
            android:padding="25dp"
            android:textSize="25sp"
             />

        <TextView android:text="@string/toomanyselected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toomanytext"
            android:layout_column="4"
            android:layout_columnSpan="2"
            android:layout_row="0"
            android:padding="25dp"
            android:textSize="35sp"
            android:textColor="@color/black"/>


        <!--START LINE 1-->
        <Button
            android:layout_width="398dp"
            android:id="@+id/lineonebutton"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:textColor="@color/colorLine"
            android:textSize="25sp"
            android:text="@string/firstline"
            android:paddingLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:hapticFeedbackEnabled="true"
            android:background="@drawable/custom_button" />

        <com.anoniq.gabort.oio.PlayerButton
            android:text="F1.1"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerf1"
            android:padding="20dp"
            android:textSize="50sp"
            android:state_selected="true"
            android:background="@drawable/custom_button"

            />

        <com.anoniq.gabort.oio.PlayerButton
            android:text="f1.2"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerf2"
            android:padding="20dp"
            android:textSize="50sp"
            android:background="@drawable/custom_button"/>

        <com.anoniq.gabort.oio.PlayerButton
            android:text="f1.3"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerf3"
            android:padding="20dp"
            android:textSize="50sp"
            android:background="@drawable/custom_button"/>

        <com.anoniq.gabort.oio.PlayerButton
            android:text="d1.1"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerd1"
            android:padding="20dp"
            android:textSize="50sp"
            android:background="@drawable/custom_button" />
        <com.anoniq.gabort.oio.PlayerButton
            android:text="d1.2"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerd2"
            android:padding="20dp"
            android:textSize="50sp"
            android:background="@drawable/custom_button"/>

        <!--END LINE 1-->

        <!--START LINE 2-->
        <LinearLayout>


        </LinearLayout>
        <Button
            android:layout_width="398dp"
            android:id="@+id/linetwobutton"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:textColor="@color/colorLine"
            android:textSize="25dp"
            android:text="@string/secondline"
            android:hapticFeedbackEnabled="true"
            android:background="@drawable/custom_button"/>
        <com.anoniq.gabort.oio.PlayerButton
            android:text="f2.1"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerf4"
            android:padding="20dp"
            android:textSize="50sp"
            android:background="@drawable/custom_button" />
        <com.anoniq.gabort.oio.PlayerButton
            android:text="f2.2"
            android:layout_row="6"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerf5"
            android:padding="20dp"
            android:textSize="50sp"
            android:background="@drawable/custom_button" />
        <com.anoniq.gabort.oio.PlayerButton
            android:text="f2.3"
            android:layout_row="6"
            android:layout_column="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerf6"
            android:padding="20dp"
            android:textSize="50sp"
            android:background="@drawable/custom_button"/>

        <com.anoniq.gabort.oio.PlayerButton
            android:text="d2.1"
            android:layout_row="7"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerd3"
            android:padding="20dp"
            android:textSize="50sp"
            android:background="@drawable/custom_button"/>

        <com.anoniq.gabort.oio.PlayerButton
            android:text="d2.2"
            android:layout_row="7"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerd4"
            android:padding="20dp"
            android:textSize="50sp"
            android:background="@drawable/custom_button"/>
        <!--END LINE 2-->

        <!--START LINE 3 -->

        <Button
            android:layout_width="398dp"
            android:id="@+id/linethreebutton"
            android:layout_row="1"
            android:layout_column="5"
            android:layout_columnSpan="3"
            android:textColor="@color/colorLine"
            android:textSize="25dp"
            android:text="@string/thirdline"
            android:paddingLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:hapticFeedbackEnabled="true"
            android:background="@drawable/custom_button"/>

        <com.anoniq.gabort.oio.PlayerButton
            android:text="f3.1"
            android:layout_row="2"
            android:layout_column="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerf7"
            android:padding="20dp"
            android:textSize="50sp"
            android:background="@drawable/custom_button"/>
        <com.anoniq.gabort.oio.PlayerButton
            android:text="f3.2"
            android:layout_row="2"
            android:layout_column="6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerf8"
            android:padding="20dp"
            android:textSize="50sp"
            android:background="@drawable/custom_button"/>
        <com.anoniq.gabort.oio.PlayerButton
            android:text="f3.3"
            android:layout_row="2"
            android:layout_column="7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerf9"
            android:padding="20dp"
            android:textSize="50sp"
            android:background="@drawable/custom_button"/>

        <com.anoniq.gabort.oio.PlayerButton
            android:text="d3.1"
            android:layout_row="3"
            android:layout_column="6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerd5"
            android:padding="20dp"
            android:textSize="50sp"
            android:background="@drawable/custom_button"/>
        <com.anoniq.gabort.oio.PlayerButton
            android:text="d3.2"
            android:layout_row="3"
            android:layout_column="7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerd6"
            android:padding="20dp"
            android:textSize="50sp"
            android:background="@drawable/custom_button"/>

        <!--END LINE 3-->

        <!--START LINE 4 -->

        <Button
            android:layout_width="398dp"
            android:id="@+id/linefourbutton"
            android:layout_row="5"
            android:layout_column="5"
            android:layout_columnSpan="3"
            android:textColor="@color/colorLine"
            android:textSize="25dp"
            android:text="@string/fourthline"
            android:paddingLeft="0dp"
            android:hapticFeedbackEnabled="true"
            android:background="@drawable/custom_button"/>

        <com.anoniq.gabort.oio.PlayerButton
            android:text="f4.1"
            android:layout_row="6"
            android:layout_column="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerf10"
            android:padding="20dp"
            android:textSize="50sp"
            android:background="@drawable/custom_button"/>
        <com.anoniq.gabort.oio.PlayerButton
            android:text="f4.2"
            android:layout_row="6"
            android:layout_column="6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerf11"
            android:padding="20dp"
            android:textSize="50sp"
            android:background="@drawable/custom_button"/>
        <com.anoniq.gabort.oio.PlayerButton
            android:text="f4.3"
            android:layout_row="6"
            android:layout_column="7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerf12"
            android:padding="20dp"
            android:textSize="50sp"
            android:background="@drawable/custom_button"/>
        <com.anoniq.gabort.oio.PlayerButton
            android:text="d4.2"
            android:layout_row="7"
            android:layout_column="7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerd7"
            android:padding="20dp"
            android:textSize="50sp"
            android:background="@drawable/custom_button"/>

        <com.anoniq.gabort.oio.PlayerButton
            android:text="d4.1"
            android:layout_row="7"
            android:layout_column="6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerd8"
            android:padding="20dp"
            android:textSize="50sp"
            android:background="@drawable/custom_button"/>
        <!--END LINE 4 -->

        <!--START GOEALKEEPERS -->

        <TextView
            android:layout_row="6"
            android:layout_column="3"
            android:layout_columnSpan="2"
            android:textColor="@color/colorLine"
            android:textSize="25dp"
            android:text="@string/goalkeeperstext"
            android:layout_gravity="bottom|center_horizontal"
            />

        <com.anoniq.gabort.oio.PlayerButton
            android:text="GK1"
            android:layout_row="7"
            android:layout_column="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playergk1"
            android:padding="20dp"
            android:textSize="50sp"
            android:hapticFeedbackEnabled="true"
            android:background="@drawable/custom_button"/>
        <com.anoniq.gabort.oio.PlayerButton
            android:text="GK2"
            android:layout_row="7"
            android:layout_column="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playergk2"
            android:padding="20dp"
            android:textSize="50sp"
            android:hapticFeedbackEnabled="true"
            android:background="@drawable/custom_button"/>


        <!--END GOEALKEEPERS -->



        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/colorLine"
            android:layout_row="1"
            android:layout_column="8"
            android:layout_rowSpan="7"
            android:layout_gravity="bottom|center_horizontal" />


        <!--BEGIN EXTRAS -->
        <TextView
            android:layout_row="1"
            android:layout_column="9"
            android:layout_columnSpan="2"
            android:textColor="@color/colorLine"
            android:textSize="25dp"
            android:text="@string/extras"
            android:paddingLeft="15dp" />

        <com.anoniq.gabort.oio.PlayerButton
            android:text="EX1"
            android:layout_row="2"
            android:layout_column="9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerex1"
            android:padding="20dp"
            android:textSize="50sp"
            android:background="@drawable/custom_button"/>
        <com.anoniq.gabort.oio.PlayerButton
            android:text="EX2"
            android:layout_row="3"
            android:layout_column="9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerex2"
            android:padding="20dp"
            android:textSize="50sp"
            android:background="@drawable/custom_button"/>
        <com.anoniq.gabort.oio.PlayerButton
            android:text="EX3"
            android:layout_row="6"
            android:layout_column="9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerex3"
            android:padding="20dp"
            android:textSize="50sp"
            android:background="@drawable/custom_button"/>
        <com.anoniq.gabort.oio.PlayerButton
            android:text="EX4"
            android:layout_row="7"
            android:layout_column="9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerex4"
            android:padding="20dp"
            android:textSize="50sp"
            android:background="@drawable/custom_button"/>





        <TextView
        android:text="11, 12, 13, 14, 15, 1,"
        android:layout_row="1"
        android:layout_column="3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:layout_columnSpan="2"
            android:layout_rowSpan="4"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:background="@color/highlighted_text_material_dark" />





    </GridLayout>
</FrameLayout>
